# data_validation

./: .gitignore  README.md  pyproject.toml
functions/: plot_functions.py
input_data/Fugro/: 4423-241417_PB_HHW_01-01-2023 00_00_00_07-10-2025 00_00_00_Uur_20251007112142.csv  4423-241417_PB_HOORN_01-01-2023 00_00_00_07-10-2025 00_00_00_Uur_20251007112422.csv  4424-260484_HHW_normaal_01-01-2023 00_00_00_07-10-2025 00_00_00_Uur_20251007113401.csv  4424_Hoorn_Zuiderdijk_01-01-2023 00_00_00_07-10-2025 00_00_00_Uur_20251007112613.csv
input_data/Wiertsema/: test_83034-1_SensorData_20251007_122253.xlsx  test_88111-1_SensorData_20251007_121351.xlsx
input_stressors/: Buitenwaterstand_Oosterpolder_Hoorn.csv  Neerslag_2021_2025.csv  Verdamping_2021_2025.csv  Verdamping_Lang.csv  evap_station_249_2020.csv  evaporation_long_clean.csv  prec_station_249_2020.csv  precipitation_long_clean.csv
notebooks/: data_validation_graph_and_csv_generator.ipynb  data_validation_report_generator.ipynb  knmi_data_pull.ipynb  model_contribution_13_7.ipynb  model_single_non_linear.ipynb  model_single_tarso_model.ipynb  raw_csv_fugro.ipynb  raw_csv_wiertsema.ipynb  raw_fugro_wiertsema_knmi_csv_creator.ipynb  simulated_head_long.csv
notebooks/old_notebooks_18_11_25/: analysis_data_excel_generator.ipynb  analysis_data_graph_generator.ipynb  analysis_data_quality_reporter.ipynb  data_validation_single.ipynb
output_data/: analysis_fugro_wiertsema.xlsx  validation_report_hourly_csv_fugro_filtered.xlsx  validation_report_hourly_csv_wiertsema_filtered.xlsx
(+1019 files in other folders)
