[project]
name = "data-validation"
version = "0.1.0"
description = ""
authors = [
    {name = "JeroenHHNK",email = "j.vanruitenbeek@hhnk.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.2)",
    "openpyxl (>=3.1.5)",
    "xlwings (>=0.33.15,<0.34.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pastas (>=1.11.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
